# tsq

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
docker/: docker-compose.test.yml  query_ip_allowlist.txt
docs/: dialects.md  testing.md
scripts/: probe_dialect.py  run-integration-tests.sh
src/atsq/: __init__.py  client.py  connection.py  definitions.py  errors.py  escape.py  events.py  filetransfer.py  protocol.py  transport.py
src/tsq/: __init__.py  client.py  connection.py  dialect.py  errors.py  events.py  filetransfer.py  protocol.py  transport.py
tests/fake/: fake_transport.py  test_client.py  test_connection.py  test_filetransfer.py
tests/integration/: conftest.py  test_flood_live.py  test_serverquery.py
tests/unit/: test_definitions.py  test_errors.py  test_escape.py  test_events.py  test_fixtures_replay.py  test_package.py  test_protocol.py
