[project]
name = "atsq"
version = "1.0.0a4"
description = "Asyncio TeamSpeak ServerQuery client for TeamSpeak 3 and TeamSpeak 6 over SSH"
readme = "README.md"
license = "MIT"
authors = [{ name = "Lukas Roth" }]
requires-python = ">=3.12"
dependencies = [
    "asyncssh>=2.14",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Conferencing",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/dev-lukas/atsq"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atsq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that need a real TeamSpeak server (docker)",
    "slow: long-running tests (idle keepalive etc.), opt-in",
]
addopts = "-m 'not integration and not slow'"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "^\\s*\\.\\.\\.$",
]
